resolve security problems